Required Revisisions Per School Request

--- a/FrontEndDevelopmentD277/D277Capital.html
+++ b/FrontEndDevelopmentD277/D277Capital.html
@@ -32,6 +32,7 @@
             </li>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277InfoPage.html">More Information</a></li>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277ContactUs.html">Contact Us</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277References.html">References</a></li>
             <li id="mainProfilePageReturn"><a href="https://www.csharpdeveloper.io">Return To Main Profile Page</a></li>
         </ul>
     </nav>
@@ -58,8 +59,8 @@
                 <li><p>Incorporated: 1847</p></li>
                 <li><p>Region: NorthWest Georgia</p></li>
                 <li><p>Classification: Metro / Urban</p></li>
-                <li><p>Median Income: $77,655</p></li>
-                <li><p>Median vs State Income: +19.40%</p></li>
+                <li><p>Median Income: $83,251</p></li>
+                <li><p>Median vs State Income: +14.30%</p></li>
             </ul>
         </article>
     </section>
