--- a/FrontEndDevelopmentD277/D277InfoPage.html
+++ b/FrontEndDevelopmentD277/D277InfoPage.html
@@ -30,6 +30,7 @@
             </li>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277InfoPage.html">More Information</a></li>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277ContactUs.html">Contact Us</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277References.html">References</a></li>
             <li id="mainProfilePageReturn"><a href="https://www.csharpdeveloper.io">Return To Main Profile Page</a></li>
         </ul>
     </nav>
