--- a/FrontEndDevelopmentD277/D277Macon.html
+++ b/FrontEndDevelopmentD277/D277Macon.html
@@ -30,6 +30,7 @@
             </li>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277InfoPage.html">More Information</a></li>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277ContactUs.html">Contact Us</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277References.html">References</a></li>
             <li id="mainProfilePageReturn"><a href="https://www.csharpdeveloper.io">Return To Main Profile Page</a></li>
         </ul>
     </nav>
@@ -55,7 +56,7 @@
                 <li><p>Region: Central Georgia</p></li>
                 <li><p>Classification: Urban</p></li>
                 <li><p>Median Income: $53,397</p></li>
-                <li><p>Median vs State Income: -17.89%</p></li>
+                <li><p>Median vs State Income: -74.81%</p></li>
             </ul>
         </article>
     </section>
