--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -32,6 +32,7 @@
             </li>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277InfoPage.html">More Information</a></li>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277ContactUs.html">Contact Us</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277References.html">References</a></li>
             <li id="mainProfilePageReturn"><a href="https://www.csharpdeveloper.io">Return To Main Profile Page</a></li>
         </ul>
     </nav>
@@ -68,12 +69,12 @@
         <article>
             <h1>State Data</h1>
             <ul>
-                <li><p>Population: 10,799,566</p></li>
+                <li><p>Population: 10,711,908</p></li>
                 <li><p>Founded: 1732</p></li>
                 <li><p>US State: 1788</p></li>
                 <li><p>Region: SouthEastern US</p></li>
                 <li><p>Classification: Urban / Rural</p></li>
-                <li><p>Median Income: $65,030</p></li>
+                <li><p>Median Income: $72,837</p></li>
             </ul>
         </article>
     </section>
