General Info Update

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     </nav>
     <section class="content1">
         <article>
-            <h1>Content 1 - Section</h1>
+            <h1></h1>
         </article>
     </section>
     <main class="mainContent">
-        <h1>Main Content</h1>
+        <h1>General Information</h1>
     </main>
     <section class="content2">
         <article>
-            <h1>Content 2 - Section</h1>
+            <h1></h1>
         </article>
     </section>
     <footer>
