Links Updates to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     <li><a href="#">IN PROGRESS: JavaScript Phase10</a></li>
                 </ul>
             </li>
+            <li>
+                <a href="#">Resume</a>
+                <ul>
+                    <li><a href="#">IN PROGRESS: Resume</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
     <section class="content1">
@@ -38,6 +44,7 @@
     </section>
     <main class="mainContent">
         <h1>General Information</h1>
+        <p>I will be updating this site as I go. IN PROGRESS: links will be for upcoming work to be added</p>
     </main>
     <section class="content2">
         <article>
