--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     <main class="mainContent">
         <h1>General Information</h1>
-        <p>I will be updating this site as I go. IN PROGRESS: links will be for upcoming work to be added</p>
+        <p>I will be updating this site as I go. IN PROGRESS: links will be for upcoming work to be added.</p>
     </main>
     <section class="content2">
         <article>
