--- a/JavaScriptD280/interactive-world-map/browser/index.html
+++ b/JavaScriptD280/interactive-world-map/browser/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>InteractiveWorldMap</title>
-    <base href="/svgmap/">
+    <base href="/interactive-world-map/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>:root{--borderRadius: 15px;--border: 1px solid #ffffff;--backGroundColor: #383838;--headerHeight: 75px;--navHeight: 50px;--footerHeight: 75px}*{margin:0;padding:0}app-root{width:99vw;height:99vh;display:grid;grid-template:" header header         " var(--headerHeight) " navigation navigation " var(--navHeight) " svgmap  dataview      " " footer footer         " var(--footerHeight) / 3fr 1fr}body{background-color:#000;font-weight:100;color:#fff;text-align:center}
