--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>
                 <a href="#">JavaScript</a>
                 <ul>
-                    <li><a href="./JavaScriptD280/svgmap/">JavaScript D280</a></li>
+                    <li><a href="./JavaScriptD280/interactive-world-map/">JavaScript D280</a></li>
                     <li><a href="#">IN PROGRESS: JavaScript BlackJack</a></li>
                     <li><a href="#">IN PROGRESS: JavaScript Poker</a></li>
                     <li><a href="#">IN PROGRESS: JavaScript Phase10</a></li>
