--- a/JavaScriptD280/interactive-world-map/server/index.server.html
+++ b/JavaScriptD280/interactive-world-map/server/index.server.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>InteractiveWorldMap</title>
-    <base href="/interactive-world-map/">
+    <base href="/.//">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles-YNUXVVGM.css"></head>
